Fix spacing for print

--- a/src/pages/home/styles.module.scss
+++ b/src/pages/home/styles.module.scss
@@ -45,4 +45,8 @@
   align-items: center;
   height: 100vh;
   width: 100vw;
+
+  @media print {
+    display: none;
+  }
 }
